examples/test/testpolicy13291.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13291
  namespace: namespace398
spec:
  podSelector:
    matchLabels:
      key44: value11
      key32: value35
      key2: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value34
          key42: value45
      podSelector:
        matchLabels:
          key40: value48
          key3: value32
